--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
         <div class="icons_filters">
             <p>Filters</p>
             <div class="icons_room">
-                <button title="brightnss" class="active" id="brightnss"><img src="/images/brightnss.png" alt=""></button>
-                <button title="contrast" id="contrast"><img src="/images/contrast.png" alt=""></button>
-                <button title="opactiy" id="opactiy"><img src="/images/opactiy.png" alt=""></button>
-                <button title="invert" id="invert"><img src="/images/invert.png" alt=""></button>
-                <button title="blur" id="blur"><img src="/images/blur.png" alt=""></button>
+                <button title="brightnss" class="active" id="brightnss"><img src="./images/brightnss.png" alt=""></button>
+                <button title="contrast" id="contrast"><img src="./images/contrast.png" alt=""></button>
+                <button title="opactiy" id="opactiy"><img src="./images/opactiy.png" alt=""></button>
+                <button title="invert" id="invert"><img src="./images/invert.png" alt=""></button>
+                <button title="blur" id="blur"><img src="./images/blur.png" alt=""></button>
             </div>
         </div>
         <div class="icons_filters">
             <p>rotate & flip</p>
             <div class="icons_room1">
-                <button title="rotateleft" id="rotateleft"><img src="/images/rotateleft.png" alt=""></button>
-                <button title="rotateright" id="rotateright"><img src="/images/rotateright.png" alt=""></button>
-                <button title="flip_x" id="flip_x"><img src="/images/flip.png" alt=""></button>
-                <button title="flip_y" id="flip_y"><img src="/images/flip.png" alt=""></button>
+                <button title="rotateleft" id="rotateleft"><img src="./images/rotateleft.png" alt=""></button>
+                <button title="rotateright" id="rotateright"><img src="./images/rotateright.png" alt=""></button>
+                <button title="flip_x" id="flip_x"><img src="./images/flip.png" alt=""></button>
+                <button title="flip_y" id="flip_y"><img src="./images/flip.png" alt=""></button>
             </div>
         </div>
 
